# IGameBackend

./: .gitignore  Cargo.toml
.github/workflows/: compile.yaml
src/: config.rs  db.rs  email.rs  main.rs  resource_provider.rs  tracing_middleware.rs
src/error/: dberror_check.rs  mod.rs  response_error.rs
src/model/: app.rs  app_subscribe.rs  article.rs  email.rs  game.rs  game_article.rs  game_mod.rs  mod.rs  mod_article.rs  notice.rs  notification.rs  permission.rs  resource.rs  role.rs  tag.rs  token.rs  user.rs
src/router/: app.rs  app_subscribe.rs  article.rs  email.rs  game_article.rs  mod.rs  mod_article.rs  notice.rs  notification.rs  resource.rs  tag.rs  token.rs  user.rs
src/util/: dberror_check.rs  email.rs  hash.rs  jwt.rs  mod.rs  req_parse.rs  serde_fn.rs
