# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "igame_backend"
version = "0.1.0"
edition = "2018"
publish = false

[profile.dev]
opt-level = 0
overflow-checks = true
lto = false
incremental = true

[profile.release]
opt-level = 3
overflow-checks = false
lto = true
incremental = false

[[bin]]
name = "igame_backend"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.8"
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.9"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres_array = "0.11"
rustls = "0.19"
tokio-postgres-rustls = "0.8"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.99"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "7"
lazy_static = "1"
blake3 = "1"
rand = "0.8"
hex = "0.4"
tracing = { version = "0.1" }
tracing-log = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-appender = "0.1"
tracing-actix-web = { version = "0.4.0-beta.10", default-features = false }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "json",
    "brotli",
    "deflate",
] }
lettre = { git = "https://github.com/lettre/lettre", rev = "696c06e8d7a6a69163b3f144fb039b452214fd51", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1-rustls-tls",
    "tokio1",
    "pool",
] }
